--- a/templates/first_run.html
+++ b/templates/first_run.html
@@ -169,7 +169,8 @@
                 <small class="text-muted">API key for Click-to-Call functionality (optional)</small>
             </div>
             <div class="mb-3">
-                <label for="C2C_ADDRESS" class="form-label"></label>
+                <h4>Click to Call Address</h4>
+                <label for="C2C_ADDRESS" class="form-label">Click to Call Address</label>
                 <input type="text" class="form-control" id="C2C_ADDRESS" name="C2C_ADDRESS" placeholder="">
             </div>
         </div>
